# plr

./: Cargo.toml  README.md  python_prototype.ipynb
benches/: optimal_bench.rs  plr_bench.rs  spline_bench.rs
src/: greedy.rs  lib.rs  optimal.rs  test_util.rs  util.rs
src/data/: mod.rs
src/regression/: greedy.rs  mod.rs  optimal.rs
src/spline/: greedy.rs  mod.rs
