[package]
name = "plr"
description = "Performs greedy or optimal error-bounded piecewise linear regression (PLR)"
repository = "https://github.com/RyanMarcus/plr"
keywords = ["plr", "piecewise", "regression"]
license = "GPL-3.0-or-later"
version = "0.1.5"
authors = ["Ryan Marcus <ryan@ryanmarc.us>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3.2"

[dev-dependencies]
criterion = "0.3"

[badges]
travis-ci = { repository = "RyanMarcus/plr", branch = "master" }

[[bench]]
name = "plr_bench"
harness = false
